<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/reboot_title"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/count_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/reboot_time"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/maxtime_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/count_tv"
        android:layout_marginLeft="10dp"
        android:text="@string/reboot_maxtime"
        android:textSize="20sp" />
	
    <CheckBox 
        android:id="@+id/sdcard_check_cb"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/maxtime_tv"
        android:text="@string/check_sd_state"/>
        
    <CheckBox 
        android:id="@+id/is_check_sys"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/sdcard_check_cb"
        android:text="@string/check_sys_state"/>

    <CheckBox
        android:id="@+id/is_check_wifi_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/is_check_sys"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/check_wifi_bt_state" />

    <CheckBox
        android:id="@+id/is_check_mobile_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/is_check_wifi_bt"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/check_mobile_data_state" />

    <TextView 
        android:id="@+id/sdcard_check_tv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:text="@string/check_sd_result"
        android:textSize="24sp"/>

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/is_check_mobile_data"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/setting_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_setting" />
        <Button
            android:id="@+id/setting_delay_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_setting_delay" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear" />
    </LinearLayout>

    <TextView
        android:id="@+id/countdown_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reboot_countdown"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/warn_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_layout"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_stop" />

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_exit" />
    </LinearLayout>

</RelativeLayout>
