<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/recovery_title"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/testtime_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/already_test_time"
        android:textSize="20sp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/maxtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/testtime_tv"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/maxtime_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_test_time"
            android:textSize="20sp" />

        <Button
            android:id="@+id/maxtime_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/max_set" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/erase_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/maxtime"
        android:text="@string/erase_flash" />

    <CheckBox
        android:id="@+id/wipeall_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/erase_cb"
        android:text="@string/wipe_all" />

    <CheckBox
        android:id="@+id/check_sys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wipeall_cb"
        android:text="@string/check_sys_state"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/check_wifi_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_sys"
        android:text="@string/check_wifi_bt_state" />

    <CheckBox
        android:id="@+id/check_mobile_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_wifi_bt"
        android:text="@string/check_mobile_data_state" />

    <TextView
        android:id="@+id/warn_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_mobile_data"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/countdown_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/warn_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/warning_tf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countdown_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/warning_tf"
        android:textColor="#FF0000"
        android:textSize="26sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_stop" />

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_exit" />
    </LinearLayout>

</RelativeLayout>
