<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/sleep_title"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/waketime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/waketime_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wake_string"
            android:textSize="20sp" />

        <Button
            android:id="@+id/waketime_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/wake_set" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/intervaltime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/waketime"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/intervaltime_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interval_string"
            android:textSize="20sp" />

        <Button
            android:id="@+id/intervaltime_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/interval_set" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/max_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intervaltime"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/max_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxcount_string"
            android:textSize="20sp" />

        <Button
            android:id="@+id/max_count_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/max_set" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_stop" />

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_exit" />
    </LinearLayout>

</RelativeLayout>