<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/dvfs_title"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/count_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/already_test_time"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/maxtime_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/count_tv"
        android:layout_marginLeft="10dp"
        android:text="@string/max_test_time"
        android:textSize="20sp" />

    <Button
        android:id="@+id/setting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maxtime_tv"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_setting" />

    <TextView
        android:id="@+id/countdown_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_test_countdown"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/warn_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_btn"
        android:layout_above="@+id/layout_btn"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_stop" />

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_exit" />
    </LinearLayout>

</RelativeLayout>