<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/root1_view">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_title"
        android:textSize="20sp" 
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/max_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_time" 
        android:textColor="@android:color/black"/>
    
    <TextView
        android:id="@+id/test_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_test_time"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stop" 
        android:textColor="@android:color/black">
    </Button>

</LinearLayout>